# ProjectVoid

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: release-build.yml
resources/Models/Camera/: Camera.fbx
resources/Models/Crates/: crates.fbx
resources/Models/Cube/: Cube.fbx
resources/Models/Freddy/: freddy-fazbear-special-delivery.fbx
resources/Models/Ground/: Ground.fbx
resources/Models/Plane/: Plane.fbx
resources/Models/Soldier/: Soldier.fbx  SoldierFixed.fbx  soldier.fbx
resources/Models/Sonic/: Sonic.mtl
resources/Models/Terminal/: terminal.fbx
resources/Models/V1/: Mirage_V1.fbx
resources/Models/Xeno/: XenoRaven.fbx
resources/Project/Scenes/: Scene.json
resources/Scenes/: Scene.json  default_scene.json  example_scene.json
src/: main.cpp
src/Core/: Core.cpp  Core.h
src/Core/Resources/: ResourceManager.cpp  ResourceManager.h
src/Debug/: Debug.cpp  Debug.h
src/EditorUI/: EditorManager.cpp  EditorPanel.cpp  EditorPanel.h  EditorStyles.h
src/EditorUI/ConsolePanel/: ConsolePanel.cpp  ConsolePanel.h
src/EditorUI/InspectorPanel/: InspectorPanel.cpp  InspectorPanel.h
src/EditorUI/ProjectPanel/: FileItem.cpp  ProjectPanel.cpp  ProjectPanel.h
src/EditorUI/ScenePanel/: SceneHierarchyRenderer.cpp  SceneHierarchyRenderer.h  SceneHierarchyValidator.cpp  SceneHierarchyValidator.h  ScenePanel.cpp  ScenePanel.h  SelectionManager.h
src/EditorUI/TitleBarPanel/: TitleBarPanel.cpp  TitleBarPanel.h
src/Engine/: Engine.cpp  Engine.h  ExecutionMode.h
src/Engine/Input/: Input.cpp  Input.h  InputKey.h  InputMouseButton.h
src/Engine/Physics/: Physics.cpp  Physics.h  PhysicsConstructionInfo.h  Ray.h
src/Engine/Project/: Project.cpp  Project.h
src/Engine/Time/: Time.cpp  Time.h
src/Error/: Error.h
src/Game/ComponentScripts/: ComponentMacros.h  ComponentRegistry.h  ObjectComponent.cpp  ObjectComponent.h
src/Game/ComponentScripts/Camera/: Camera.cpp  Camera.h
src/Game/ComponentScripts/Collider/: BoxCollider.cpp  BoxCollider.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h
src/Game/ComponentScripts/EditorCamera/: EditorCamera.cpp  EditorMovement.cpp  EditorMovement.h
src/Game/ComponentScripts/Light/: Light.cpp  Light.h
src/Game/ComponentScripts/MeshRenderData/: MeshRenderData.cpp  MeshRenderData.h
src/Game/ComponentScripts/Movement/: MouseLook.cpp  MouseLook.h  Movement.cpp  Movement.h
src/Game/ComponentScripts/Rigidbody/: Rigidbody.cpp  Rigidbody.h
src/Game/ComponentScripts/Test/: RayCastTest.cpp  RayCastTest.h
src/Game/ComponentScripts/Transform/: Transform.cpp  Transform.h
src/Game/ObjectGroup/: ObjectGroupManager.cpp  ObjectGroupManager.h
src/Game/PostProcessing/: PostProcessing.cpp  PostProcessing.h
src/Game/Scene/: Scene.cpp  Scene.h
src/Game/Scene/SceneDeserializer/: SceneDeserializer.cpp  SceneDeserializer.h
src/Game/Scene/SceneSerializer/: SceneSerializer.cpp  SceneSerializer.h
src/Game/Types/: Axis.cpp  Axis.h  CreateParameters.h  Material.cpp  Material.h  Transform.h
src/Game/Types/BoundingBox/: AABB.cpp  AABB.h
src/Game/Types/Camera/: Camera.cpp  Camera.h
src/Game/Types/GLBuffer/: GLBuffer.cpp  GLBuffer.h
src/Game/Types/GLBuffer/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.h
src/Game/Types/GLBuffer/RenderBuffer/: RenderBuffer.cpp  RenderBuffer.h
src/Game/Types/GLBuffer/Texture/: Texture2D.cpp  Texture2D.h
src/Game/Types/GameObject/: GameObject.cpp  GameObject.h  GameObjectParameters.h
src/Game/Types/Model/: Mesh.cpp  Mesh.h  MeshNode.h  MeshRenderData.cpp  MeshRenderData.h  Model.cpp  Model.h  Vertex.h
src/Game/Types/Texture/: Texture2D.cpp  Texture2D.h  TextureParameters.cpp  TextureParameters.h
src/Game/Types/Transform/: Transform.cpp  Transform.h
src/Renderer/: RenderData.h  RenderItem3D.h  RenderTypes.h  Renderer.cpp  Renderer.h
src/Renderer/Buffers/: BufferObject.cpp  BufferObject.h  UBO.cpp  UBO.h  VBO.cpp  VBO.h
src/Shader/: Shader.cpp  Shader.h
src/Shader/GLSLShaders/: geometry.frag  geometry.vert
src/Shader/GLSLShaders/IndirectShading/: environmentAmbient.frag  geometry.frag  geometry.vert  lighting.frag  lighting.vert
src/Shader/GLSLShaders/PostProcessing/: fog.frag  postProcess.frag
src/UI/: EditorManager.cpp  EditorManager.h  EditorPanel.cpp  EditorPanel.h  EditorStyles.h
src/UI/ProjectPanel/: FileItem.cpp  FileItem.h  ProjectPanel.cpp  ProjectPanel.h
src/UI/ScenePanel/: SceneHierarchyBuilder.cpp  SceneHierarchyBuilder.h  SceneHierarchyRenderer.cpp  ScenePanel.cpp  ScenePanel.h  SelectionManager.cpp
src/UI/TitleBarPanel/: TitleBarPanel.cpp  TitleBarPanel.h
src/Utils/: JsonUtils.h  Utils.cpp  Utils.h
